Задание стиля интерфейса в файле CSS

--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
 </head>
 <body>
     <div class="header">
-        <div id="headerlogo">Header logo</div>
-        <ul class="link">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-    <div class="info">
-        <div id="title">This website is awesome</div>
-        <a>This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</a>
-        <button id="signuptop">Sign up</button>
-    </div>
-    <img class="imgone" src="/images/Pikcha.jpg" alt="this is a placeholder for an images">
+        <div class="topheader">
+            <div id="headerlogo">Header logo</div>
+            <ul class="link">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="downheader">
+            <div class="info">
+                <div class="title">This website is awesome</div>
+                <a>This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</a>
+                <button id="signuptop">Sign up</button>      
+            </div>
+            <img class="imgone" src="/images/Pikcha.jpg" alt="this is a placeholder for an images">
+        </div>
     </div>
 <div class="RInfo">
     <div id="titleRInfo">Some random information.</div>
@@ -48,7 +52,7 @@
 </div>
 <div class="signupbot">
     <div class="Textbot">
-        <div>Call to action!It's time!</div>
+        <div class="Text1">Call to action!It's time!</div>
         <div>Sign up for our product by clicking that button right over there!</div>
     </div>
     <button id="signupbot">Sign up</button>
