--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
                 <a>This website has some subtext that goes here under the main title.It's a smaller font and the color is lower contrast</a>
                 <button id="signuptop">Sign up</button>      
             </div>
-            <img class="imgone" src="/images/Pikcha.jpg" alt="this is a placeholder for an images">
+            <img class="imgone" src="../images/Pikcha.jpg" alt="this is a placeholder for an images">
         </div>
     </div>
 <div class="RInfo">
     <div id="titleRInfo">Some random information.</div>
     <div class="container">
         <div class="point">
-            <img src="/images/mochi.png" alt="mochi">
+            <img src="../images/mochi.png" alt="mochi">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="point">
-            <img src="/images/mochi.png" alt="mochi">
+            <img src="../images/mochi.png" alt="mochi">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="point">
-            <img src="/images/mochi.png" alt="mochi">
+            <img src="../images/mochi.png" alt="mochi">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="point">
-            <img src="/images/mochi.png" alt="mochi">
+            <img src="../images/mochi.png" alt="mochi">
             <div class="text">this is some subtext under an illustration or image</div>
         </div>
     </div>  
